--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -31,7 +31,7 @@
 }
 .header .search-type .chose-type{
     position: absolute;
-    top: 108%;
+    top: 99%;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -42,34 +42,37 @@
     border-radius: 7px;
     box-shadow: 2px 2px 6px #0000003e;
 }
-.header .search-type .chose-type button{
+.header .search-type  button{
     border: none;
     cursor: pointer;
     background-color: transparent;
     font-size: 16px;
     margin: 7px;
-    cursor: pointer;
 }
 .header .search-type .chose-type button:hover{
     color: var(--color);
 }
 
+/* TODO : Search Input */
 
 .header .search-input{
     position: relative;
     height: 100%;
     width: 390px;
     border-radius: 7px;
-    /* border-left: 1px solid black; */
 }
 .header .search-input input{
     width: 100%;
     height: 100%;
-    border-radius: 7px;
     background-color: transparent;
-    padding-left: 20px;
-    font-size: 19px;
-    border: 1px solid grey;
+    padding-left: 10px;
+    font-size: 18px;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-color: transparent transparent #b3b3b3 transparent;
+}
+.header .search-input input:valid{
+    border-bottom-color: var(--color);
 }
 .header .search-input input:focus{
     outline: none;
@@ -84,4 +87,7 @@
     padding: 6px;
     font-size: 20px;
     cursor: pointer;
+}
+.header .search-input button:hover{
+    color: var(--color);
 }
