--- a/src/components/ImageContainer/style.css
+++ b/src/components/ImageContainer/style.css
@@ -1,39 +1,150 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-.grid-container{
-    width: 95%;
-    margin: 20px auto;
-    columns: 3;
-    column-gap: 13px;
+.grid-container {
+  width: 95%;
+  margin: 20px auto;
+  columns: 3;
+  column-gap: 13px;
 }
-.grid-container .photo{
-    width: 100%;
-    margin-bottom: 13px;
-    break-inside: avoid;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+@media screen and (max-width : 920px){
+  .grid-container{
+    columns: 2;
+  }
+
 }
-.grid-container .photo img{
-    max-width: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 7px;
+@media screen and (max-width : 580px){
+  .grid-container{
+    columns: 1;
+  }
+}
+.grid-container .photo {
+  width: 100%;
+  margin-bottom: 13px;
+  break-inside: avoid;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.grid-container .photo:hover > img {
+  transform: scale(1.02);
+}
+.grid-container .photo img {
+  max-width: 100%;
+  width: 100%;
+  object-fit: cover;
+  transition: 0.4s;
+}
+.grid-container .photo .photo-info {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  transition: 0.2s;
+}
+.grid-container .photo .photo-info:hover {
+  background: linear-gradient(to bottom, #0000002a, transparent 70%, #0000002a);
 }
 
-.grid-container .Videos{
-    width: 100%;
-    margin-bottom: 13px;
-    break-inside: avoid;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.grid-container .photo .photo-info .top-info {
+  padding:0 10px;
+  width: 100%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  transform: translateY(-40px);
+  transition: 0.3s;
 }
-.grid-container .Videos video{
-    max-width: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 7px;
+.grid-container .photo .photo-info .top-info .size{
+  border: 1px solid #ffffff8f;
+  padding: 3px;
+  background-color: #00000021;
+  color: white;
+  font-size: 13px;
+  font-weight: 300;
 }
+.grid-container .photo .photo-info .top-info .save-button{
+  display: block;
+  border: 1px solid #ffffff8f;
+  padding: 3px 7px;
+  border-radius: 6px;
+  background-color: #f2f2f2;
+  color: #000;
+  font-size: 18px;
+  /* font-weight: 800; */
+  border-radius: 10px;
+}
+.grid-container .photo .photo-info .top-info .save-button:hover{
+  background-color: #f2f2f2ce;
+  cursor: default;
+}
+.grid-container .photo:hover .top-info {
+  transform: translateY(10px);
+}
+
+.grid-container .photo .photo-info .bottom-info {
+  padding:0 10px;
+  width: 100%;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  top: 100%;
+  transition: 0.3s;
+}
+.grid-container .photo:hover .bottom-info {
+  transform: translateY(-50px);
+}
+.grid-container .photo .bottom-info .photographer{
+  color: white;
+  font-size: 16px;
+  font-weight: 300;
+}
+.grid-container .photo .bottom-info .photographer i{
+  border-radius: 50%;
+  padding: 1px;
+  font-size: 20px;
+  border: 1px solid white;
+  margin-right: 4px;
+}
+.grid-container .photo .bottom-info .download-button{
+  background-color: rgb(76, 153, 76);
+  color: white;
+  font-size: 16px;
+  padding:6px 10px;
+  border-radius: 100px;
+  font-weight: 500;
+  border: none;
+}
+.grid-container .photo .bottom-info .download-button:hover{
+  background-color: rgba(76, 153, 76, 0.89);
+}
+.grid-container .photo .bottom-info .download-button i{
+  margin-right: 5px;
+}
+.grid-container .Videos {
+  width: 100%;
+  margin-bottom: 13px;
+  break-inside: avoid;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.grid-container .Videos video {
+  max-width: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 7px;
+}
+
+
+
+/* .grid-container .photo  .photo-modale{
+  background-color: red;
+} */
